--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </header>
             <main>
                 <div class="jumbotron">
-                    <h1 class="display-3">Valeriy Yurchenko</h1>
+                    <h2 class="display-3">Valeriy Yurchenko</h2>
                     <p class="lead">Professional Downhill Mountain Bike Racer</p>
                     <img src="1.jpg" class="img-thumbnail" alt="Responsive image">
                     <div class="container">
@@ -80,24 +80,245 @@
                         <a class="btn btn-primary btn-lg" href="#" role="button">button</a>
                     </p>
                 </div>
+                <h2>Bike</h2>
+                <div id="carouselBikeIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselBikeIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselBikeIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselBikeIndicators" data-slide-to="2"></li>
+                        <li data-target="#carouselBikeIndicators" data-slide-to="3"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" src="images/social/bike/bighit2014-1.jpg" alt="Photo of Specialized BigHit 2011 mountain bike">
+                            <div class="carousel-caption d-none d-md-block">
+                                <p>03.03.2014</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="images/social/bike/bighit2014-2.jpg" alt="Photo of Specialized BigHit 2011 mountain bike">
+                            <div class="carousel-caption d-none d-md-block">
+                                <p>18.04.2014</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="images/social/bike/bighit2014-3.jpg" alt="Photo of Specialized BigHit 2011 mountain bike">
+                            <div class="carousel-caption d-none d-md-block">
+                                <p>25.08.2014</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="images/social/bike/bighit2015-4.jpg" alt="Photo of Specialized BigHit 2011 mountain bike">
+                            <div class="carousel-caption d-none d-md-block">
+                                <p>30.05.2015</p>
+                            </div>
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselBikeIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous image</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselBikeIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next image</span>
+                    </a>
+                </div>
+                <h2>Technical Specifications</h2>
+                <ul class="nav nav-pills flex-column">
+                    <li class="nav-item">
+                        <a class="nav-link" data-toggle="collapse" href="#item-1">DRIVETRAIN</a>
+                        <div id="item-1" class="collapse">
+                            <table class="table table-hover table-dark">
+                                <tbody>
+                                    <tr>
+                                        <th scope="row">CHAIN</th>
+                                        <td>KMC X8, 8-speed, w/ reuseable Missing Link</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">BOTTOM BRACKET</th>
+                                        <td>Truvativ Howitzer XR, oversize sealed outboard cartridge bearing, 73mm shell</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">CRANKSET</th>
+                                        <td>Truvativ Ruktion, 170mm w/ SBC chain guide</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">SHIFT LEVERS</th>
+                                        <td>SRAM X.4, 8-speed, trigger</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">CASSETTE</th>
+                                        <td>SRAM PG-830, 8-speed, 11-32t</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">CHAINRINGS</th>
+                                        <td>34t steel, 4-bolt, compact 104mm pattern</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">REAR DERAILLEUR</th>
+                                        <td>SRAM X.7, 9-speed, short cage</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-toggle="collapse" href="#item-2">WHEELS</a>
+                        <div id="item-2" class="collapse">
+                            <table class="table table-hover table-dark">
+                                <tbody>
+                                    <tr>
+                                        <th scope="row">FRONT HUB</th>
+                                        <td>Specialized Hi Lo disc, laser-etched logo, sealed cartridge bearing, 20mm thru-axle, 36h</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">REAR HUB</th>
+                                        <td>Specialized Disc, bolt-on 135mm, 36h</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">INNER TUBES</th>
+                                        <td>Schraeder valve 26x2.4/2.75, 1.2mm thick</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">SPOKES</th>
+                                        <td>2.0mm (14g) stainless</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">FRONT TYRE</th>
+                                        <td>Specialized Butcher SX, 60 TPI, aramid bead, soft dual compound, 26x2.3"</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">RIMS</th>
+                                        <td>P-Disc, 32mm, 36h</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">REAR TYRE</th>
+                                        <td>Specialized Butcher SX, 60 TPI, aramid bead, soft dual compound, 26x2.3"</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-toggle="collapse" href="#item-3">COCKPIT</a>
+                        <div id="item-3" class="collapse">
+                            <table class="table table-hover table-dark">
+                                <tbody>
+                                    <tr>
+                                        <th scope="row">SADDLE</th>
+                                        <td>Specialized Demo, 7mm hollow Cr-Mo rails</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">SEATPOST</th>
+                                        <td>6061 alloy, two bolt micro adjust, no offset, 30.9mm, 300mm</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">STEM</th>
+                                        <td>Specialized DH, forged, 35mm length, 4-bolt, 31.8mm</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">HANDLEBARS</th>
+                                        <td>Specialized DH low-rise bar, 6061 alloy, 750mm wide, 8 degree backsweep, 6 degree up, 31.8mm</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">GRIPS</th>
+                                        <td>Specialized lock-on, S/M: Grappler, Other: Rocca</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-toggle="collapse" href="#item-4">SUSPENSION</a>
+                        <div id="item-4" class="collapse">
+                            <table class="table table-hover table-dark">
+                                <tbody>
+                                    <tr>
+                                        <th scope="row">FORK</th>
+                                        <td>X-Fusion Vengeance, coil spring, tapered alloy steerer, reb adj., 20mm thru-axle, 170mm travel</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">REAR SHOCK</th>
+                                        <td>Custom X-Fusion Vector R, coil over w/piggy back, adj. rebound, Spring rate S: 400, M: 450, L: 500 8.5x2.5"</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-toggle="collapse" href="#item-5">BRAKES</a>
+                        <div id="item-5" class="collapse">
+                            <table class="table table-hover table-dark">
+                                <tbody>
+                                    <tr>
+                                        <th scope="row">FRONT BRAKE</th>
+                                        <td>Avid Juicy 3, hydraulic disc, metallic pads, G3 Clean Sweep rotor, 203mm rotor</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">BRAKE LEVERS</th>
+                                        <td>Avid Juicy 3 hydraulic</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">REAR BRAKE</th>
+                                        <td>Avid Juicy 3, hydraulic disc, metallic pads, G3 Clean Sweep rotor, 185mm rotor</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-toggle="collapse" href="#item-6">ACCESSORIES</a>
+                        <div id="item-6" class="collapse">
+                            <table class="table table-hover table-dark">
+                                <tbody>
+                                    <tr>
+                                        <th scope="row">PEDALS</th>
+                                        <td>Alloy platform, 9/16"</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-toggle="collapse" href="#item-7">FRAMESET</a>
+                        <div id="item-7" class="collapse">
+                            <table class="table table-hover table-dark">
+                                <tbody>
+                                    <tr>
+                                        <th scope="row">HEADSET</th>
+                                        <td>1-1/8" loose cage upper bearing and 1.5" alloy lower loose-cage bearing</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">SEAT BINDER</th>
+                                        <td>34.9mm clamp ID, alloy collar w/ QR, black</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">FRAME</th>
+                                        <td>M4 tubing ORE TT/DT, tapered HT, ISCG mount, asymetrical rear triangle, full cartridge bearing pivots , 7.5" travel</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </li>
+                </ul>
                 <div class="container text-center">
                     <form action="https://formspree.io/&#108;&#101;&#111;&#110;&#54;&#49;&#64;&#117;&#107;&#114;&#46;&#110;&#101;&#116;" method="POST">
                         <fieldset>
                             <h2>Contact</h2>
                             <div class="form-group row">
-                                <label class="col-sm-4 col-form-label text-right" for="client-name">Your name</label>
+                                <label for="client-name" class="col-sm-4 col-form-label text-right d-none d-sm-block">Your name</label>
                                 <div class="col-sm-6">
                                     <input id="client-name" name="client-name" type="text" class="form-control" placeholder="Type your name here" required>
                                 </div>
                             </div>
                             <div class="form-group row">
-                                <label for="client-email" class="col-sm-4 col-form-label text-right">Email address</label>
+                                <label for="client-email" class="col-sm-4 col-form-label text-right d-none d-sm-block">Email address</label>
                                 <div class="col-sm-6">
-                                    <input type="email" name="client-email" class="form-control" id="client-email" aria-describedby="emailHelp" placeholder="Type your email here" required>
+                                    <input type="email" name="client-email" class="form-control" id="client-email" placeholder="Type your email here" required>
                                 </div>
                             </div>
                             <div class="form-group row">
-                                <label for="client-textarea" class="col-sm-4 col-form-label float-md-right">Message</label>
+                                <label for="client-textarea" class="col-sm-4 col-form-label text-right d-none d-sm-block">Message</label>
                                 <div class="col-sm-6">
                                     <textarea class="form-control" id="client-textarea" name="client-textarea" rows="3" placeholder="You can type your message here"></textarea>
                                 </div>
