--- a/temp_code.html
+++ b/temp_code.html
@@ -19,3 +19,19 @@
         <button type="submit" class="btn btn-primary" value="Send">Send</button>
     </fieldset>
 </form>
+
+
+<img class="d-block w-100" src="images/social/bike/bighit2014-1.JPG" alt="Photo of Specialized BigHit 2011 mountain bike">
+<div class="carousel-caption d-none d-md-block">
+    <h5>test h5 numb 1</h5>
+    <p>paragrap numb 1</p>
+
+
+  <!--<div class="owl-stage-outer"><div class="owl-stage" style="transform: translate3d(0px, 0px, 0px); transition: 0s; "><div class="owl-item active"><div class="item">-->
+                <!--    <a href="https://s7d5.scene7.com/is/image/Specialized/6611?$hd$" data-bind="attr: { href: $data.zoom }" class="MagicZoom" id="zoom-1155334249067" style="position: relative; display: inline-block; text-decoration: none; outline: 0px; overflow: hidden; margin: auto; width: auto; height: auto;" title="">-->
+                <!--        <img src="https://s7d5.scene7.com/is/image/Specialized/?layer=0&amp;wid=1920&amp;hei=484&amp;fmt=jpg&amp;src=is{Specialized/background-white?wid=1920&amp;hei=484}&amp;layer=1&amp;src=is{Specialized/6611?hei=444}" class="main-img" data-bind="attr: { src: $data.img }" style="opacity: 1;">-->
+                <!--    <div class="MagicZoomBigImageCont inner-zoom" style="overflow: hidden; z-index: 100; top: -100000px; position: absolute; width: 100%; height: 100%; left: 0px; opacity: 0;">-->
+                <!--        <div class="MagicZoomHeader" style="position: relative; z-index: 10; left: 0px; top: 0px; padding: 3px; display: none; visibility: hidden;"></div>-->
+                <!--    <div style="overflow: hidden;"><img src="https://s7d5.scene7.com/is/image/Specialized/6611?$hd$" style="padding: 0px; margin: 0px; border: 0px; width: auto; height: auto; position: relative;></div></div>-->
+                <!--    <div class="MagicZoomPup" style="z-index: 10; position: absolute; overflow: hidden; display: none; visibility: hidden; width: 734px; height: 67px; opacity: 0.5; left: 478px; top: 66.5px;"></div></a>-->
+                <!--</div>-->
